--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link
+            rel="preconnect"
+            href="https://fonts.gstatic.com"
+            crossorigin="crossorigin">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+            rel="stylesheet">
         <title>Pedro Gomes</title>
     </head>
     <body>
@@ -24,6 +32,10 @@
             </p>
         </div>
 
+        <div class="flex justify-center">
+            <h2>mes competances :
+            </h2>
+        </div>
         <div class="flex flex-wrap gap-comp justify-center">
             <div>HTML</div>
             <div>CSS</div>
@@ -37,7 +49,7 @@
         </div>
 
         <div class="flex justify-center">
-            <h2>Projets</h2>
+            <h2>Projets :</h2>
         </div>
         <div class="flex justify-center">
             Projet de fin année de BTS 2024 : casque de chantier connecté avec plusiers
@@ -58,6 +70,36 @@
         <li>creation du site de monitoring</li>
         <li>transmission et stackage des donnes des capteurs</li>
     </ul>
+</div>
+
+<div class="flex justify-center">
+    <h2>Expérience Professionnelle :</h2>
+</div>
+
+<div class="expe1 flex justify-center">
+    Dévloppeur web et gestion de reseaux
+</div>
+
+<div class="entreprise1 flex justify-center">
+    Cahpp
+</div>
+
+<div class="date1 flex justify-center">
+    2020 à 2023 3 stages de 3 semaines
+</div>
+</div>
+
+<div class="compeStage flex justify-center">
+<ul>
+    <li>
+        <b>Création du site :</b>
+        Création de la page d'accueil du site web interne en HTML et CSS</li>
+    <li>
+        <b>Gestion des réseaux et serveurs :</b>
+        Installation de nouveaux postes avec réseau et ajout de nouveaux réseaux sur le
+        serveur (câblage et paramétrage)</li>
+
+</ul>
 </div>
 
 </body>
