--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,6 +19,7 @@
             <div class="flex justify-center">
                 <h1>Pedro Gomes</h1>
             </div>
+            
         </header>
 
         <div class="flex justify-center">
@@ -46,10 +47,11 @@
             <div>C++</div>
             <div>GitHub</div>
             <div>Linux</div>
+            <div>Photoshop</div>
         </div>
 
         <div class="flex justify-center">
-            <h2>Projets :</h2>
+            <h2>Mes Projets :</h2>
         </div>
         <div class="flex justify-center">
             Projet de fin année de BTS 2024 : casque de chantier connecté avec plusiers
@@ -72,35 +74,6 @@
     </ul>
 </div>
 
-<div class="flex justify-center">
-    <h2>Expérience Professionnelle :</h2>
-</div>
-
-<div class="expe1 flex justify-center">
-    Dévloppeur web et gestion de reseaux
-</div>
-
-<div class="entreprise1 flex justify-center">
-    Cahpp
-</div>
-
-<div class="date1 flex justify-center">
-    2020 à 2023 3 stages de 3 semaines
-</div>
-</div>
-
-<div class="compeStage flex justify-center">
-<ul>
-    <li>
-        <b>Création du site :</b>
-        Création de la page d'accueil du site web interne en HTML et CSS</li>
-    <li>
-        <b>Gestion des réseaux et serveurs :</b>
-        Installation de nouveaux postes avec réseau et ajout de nouveaux réseaux sur le
-        serveur (câblage et paramétrage)</li>
-
-</ul>
-</div>
-
 </body>
+
 </html>
