--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,7 +30,7 @@
 
         <div class="flex justify-center topPadding">
             <p class="presentation">
-                Bonjour et bienvenue, je m'appelle Pedro, j'ai 20 ans et je suis étudiant en
+                Bonjour et bienvenue, je m'appelle Pedro Gomes, j'ai 20 ans et je suis étudiant en
                 Licence Professionnelle à
                 <a href="https://www.iut-evry.fr">l'IUT d'Évry</a>, spécialisé en développement
                 web fullstack en alternance. Je suis actuellement à la recherche d'une
@@ -120,6 +120,9 @@ Mon<a href="/CVetLDM/Rapport_de_Projet.pdf" target="_blank">
 (Etudiant 3)</p>
 </div>
 
+<div class="flex justify-center">
+<p>Vous pouvez me contacter par Email : <a href="mailto:pedrogomeslycee@gmail.com">pedrogomeslycee@gmail.com</a> ou par téléphone : +33 7 83 73 62 85</p>
+</div>
 </body>
 
 </html>
