--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,11 +14,15 @@
     </head>
     <body>
         <header>
-            <div class="flex justify-center">
-                <h1>Pedro Gomes</h1>
-            </div>
+            <main class="container">
+                <p>Bonjour 👋 Je suis</p>
+                <section class="animation">
+                  <div class="first"><div>Pedro Gomes</div></div>
+                  <div class="second"><div>Dévloppeur Web</div></div>
+                </section>
+              </main>
 
-            <div class="flex justify-center topPadding gap-comp">
+            <div class="logo1 flex justify-center topPadding gap-comp">
                 <a href="https://www.linkedin.com/in/pedro-gomes-33200821b/" target="_blank">
                     <ion-icon name="logo-linkedin" size="large"></ion-icon>
                 </a>
@@ -28,7 +32,7 @@
             </div>
         </header>
 
-        <div class="flex justify-center topPadding">
+        <div class=" logo1 flex justify-center topPadding">
             <p class="presentation">
                 Bonjour et bienvenue, je m'appelle Pedro Gomes, j'ai 20 ans et je suis étudiant en
                 Licence Professionnelle à
@@ -45,7 +49,7 @@
             <h2>mes competances :
             </h2>
         </div>
-        <div class="flex flex-wrap gap-comp justify-center topPadding">
+        <div class="competences flex flex-wrap gap-comp justify-center topPadding">
             <div>HTML</div>
             <div>CSS</div>
             <div>PHP</div>
@@ -68,8 +72,8 @@
     </div>
 </br>
 <div class="grid gt-col-2 gap-comp topPadding">
-    <div><img src="/images/Casque.PNG"></div>
-    <div><img src="/images/site.png"></div>
+    <div><img src="./images/Casque.PNG"></div>
+    <div><img src="./images/site.png"></div>
 </div>
 
 <div class="taches flex justify-center topPadding">
@@ -115,13 +119,13 @@
 
 <div class="flex justify-center topPadding">
 <p>
-Mon<a href="/CVetLDM/Rapport_de_Projet.pdf" target="_blank">
+Mon<a href="./CVetLDM/Rapport_de_Projet.pdf" target="_blank">
     Rapport_de_Projet</a>
 (Etudiant 3)</p>
 </div>
 
 <div class="flex justify-center">
-<p>Vous pouvez me contacter par Email : <a href="mailto:pedrogomeslycee@gmail.com">pedrogomeslycee@gmail.com</a> ou par téléphone : +33 7 83 73 62 85</p>
+<p>Vous pouvez me contacter par Email : <a href="mailto:pedrogomeslycee@gmail.com">pedrogomeslycee@gmail.com</a> ou par téléphone : +33 07 83 73 62 85</p>
 </div>
 </body>
 
