--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,9 +15,9 @@
     <body>
         <header>
             <main class="container">
-                <p>Bonjour 👋 Je suis</p>
+                <p><H5>Bonjour 👋 Je suis</H5></p>
                 <section class="animation">
-                  <div class="first"><div>Pedro Gomes</div></div>
+                  <div class="first"><div>Pedro</div></div>
                   <div class="second"><div>Dévloppeur Web</div></div>
                 </section>
               </main>
