--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -117,9 +117,19 @@
 </ol>
 </div>
 
+<h2><p class="flex justify-center">Mise en scène :</p></h2>
+
+<div class="presentations">
+L'ouvrier arrive sur le chantier et allume le casque. Dès que le casque est activé, 
+l'Arduino auquel il est connecté commence à envoyer les données récupérées à la base 
+de données installée sur le poste du chef de chantier. Celui-ci, depuis son site de 
+monitoring, peut visualiser toutes les données, comme illustré par l'image ci-dessus.
+</div>
+
+
 <div class="flex justify-center topPadding">
 <p>
-Mon<a href="./CVetLDM/Rapport_de_Projet.pdf" target="_blank">
+Le<a href="./CVetLDM/Rapport_de_Projet.pdf" target="_blank">
     Rapport_de_Projet</a>
 (Etudiant 3)</p>
 </div>
