--- a/cours/ex1td2.html
+++ b/cours/ex1td2.html
@@ -79,7 +79,7 @@
                 <td>
                     <table border="1" style="border: 1px solid; width: 100%;">
                         <tr>
-                            <td class="tab12">
+                            <td class="tab2">
                                 1
                             </td>
                             <td class="tab2">
@@ -117,6 +117,18 @@
             </tr>
 
         </table>
+    </br>
 
-    </body>
+    <div class="Entre">
+        <input type="text" placeholder="Salut">
+    </div>
+
+    <div class="sub">
+        <input type="submit" value="Soumettre la requete">
+    </div>
+
+    <div class="para1"> pedro</div>
+    
+
+</body>
 </html>
