--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,11 +37,7 @@
                 Bonjour et bienvenue, je m'appelle Pedro Gomes, j'ai 20 ans et je suis étudiant en
                 Licence Professionnelle à
                 <a href="https://www.iut-evry.fr">l'IUT d'Évry</a>, spécialisé en développement
-                web fullstack en alternance. Je suis actuellement à la recherche d'une
-                entreprise, voici mon
-                <a href="/CVetLDM/cvPedroGomes.pdf" target="_blank">CV</a>
-                et ma
-                <a href="/CVetLDM/ldmPedroGomes.pdf" target="_blank">Letre de motivation</a>
+                web fullstack en alternance. 
             </p>
         </div>
 
@@ -53,13 +49,12 @@
             <div>HTML</div>
             <div>CSS</div>
             <div>PHP</div>
-            <div>SQL</div>
+            <div>MySQL</div>
             <div>JavaScript</div>
             <div>Python</div>
             <div>C++</div>
             <div>GitHub</div>
             <div>Linux</div>
-            <div>Photoshop</div>
         </div>
 
         <div class="flex justify-center topPadding">
@@ -68,7 +63,7 @@
         <div class="flex justify-center topPadding">
             Projet de fin année de BTS 2024 : casque de chantier connecté avec plusiers
             capteurs (GPS, Temperature, humiditée et taux de gaz) avec un site de monitoring
-            pour le chez de chantier</br>
+            pour le chez de chantier.</br>
     </div>
 </br>
 <div class="grid gt-col-2 gap-comp topPadding">
