--- a/cours/js/indexTP2.html
+++ b/cours/js/indexTP2.html
@@ -55,12 +55,7 @@
         <h2>
             Exercice 5</h2>
         <form name="ex5" style="background:lightgreen">
-            <input
-                type="radio"
-                id="radio0"
-                name="radio_coche"
-                value="red"
-                onclick="changement_couleurs();">
+            <input type="radio"id="radio0"name="radio_coche"value="red" onclick="changement_couleurs();">
             <label for="radio0">Rouge</label>
             <input
                 type="radio"
